added ip and port as value instead of placeholder

--- a/IoTTouchPhone/www/index.html
+++ b/IoTTouchPhone/www/index.html
@@ -53,8 +53,8 @@
                 <p>Please provide an IP address & port to your TouchNotifier IoT project (Touch Sensor & Buzzer) on your development platform.</p>
                 <b>Note:</b> This is needed for establishing a connection betweeen your Companion App and Node.js/IoT application.
                 <p>
-                <input id="ip_address" type="text" placeholder="10.232.205.228">
-                <input id="port" type="text" placeholder="1337">
+                <input id="ip_address" type="text" placeholder="10.232.205.228" value="10.232.205.228">
+                <input id="port" type="text" placeholder="1337" value="1337">
                 <a class="block button" onclick="validateIP()">Submit</a>
             </div>
         </div>
