send food message to front end

--- a/IoTTouchPhone/www/index.html
+++ b/IoTTouchPhone/www/index.html
@@ -38,6 +38,17 @@
 
             <div id="main" title="TouchNotifier" class="panel" data-footer="none">
                 <div class="center">
+                    <h1>Food info</h1>
+                    <table class="table">
+                        <tr>
+                            <td>Name:</td>
+                            <td id="name">{{food.name}}</td>
+                        </tr>
+                        <tr>
+                            <td>Date Added:</td>
+                            <td id="dateAdded">{{food.dateAdded}}</td>
+                        </tr>
+                    </table>
                     <h1>Are you Expecting Anyone?</h1>
                     <div id="notifier_circle" class="gray">
 
