Added some functions for displaying dates

--- a/IoTTouchPhone/www/index.html
+++ b/IoTTouchPhone/www/index.html
@@ -42,14 +42,21 @@
                     <table class="table">
                         <tr>
                             <td>Name:</td>
-                            <td id="name">{{food.name}}</td>
+                            <td id="name"></td>
                         </tr>
                         <tr>
                             <td>Date Added:</td>
-                            <td id="dateAdded">{{food.dateAdded}}</td>
+                            <td id="dateAdded"></td>
+                        </tr>
+                        <tr>
+                            <td>Status:</td>
+                            <td id="status"></td>
+                        </tr>
+                        <tr>
+                            <td>Days To Use:</td>
+                            <td id="daysToUse"></td>
                         </tr>
                     </table>
-                    <h1>Are you Expecting Anyone?</h1>
                     <div id="notifier_circle" class="gray">
 
                     </div>
