status and info displays in app.

--- a/IoTTouchPhone/www/index.html
+++ b/IoTTouchPhone/www/index.html
@@ -40,10 +40,10 @@
         <div class="no-food-message alert alert-warning">
             <p>You have no food in your fridge. Add food to your fridge to get started.</p>
         </div>
-        <div class="alert alert-warning">
+        <div class="alert alert-warning hidden">
             <p>You're food is expiring in <span id="alertDaysToUse"></span> days. Use it soon!</p>
         </div>
-        <div class="alert alert-danger">
+        <div class="alert alert-danger hidden">
             <p>You're food has expired!</p>
         </div>
         <div class="food panel hidden">
